__extends = "https://raw.githubusercontent.com/rmclabs-io/dev-styleguide/main/python/pyproject.toml"

[tool.poetry]
name        = "drytoml"
version     = "0.1.0"
description = "Keep toml configuration centralized and personalizable"
authors     = ["Pablo Woolvett <pablowoolvett@gmail.com>"]
readme      = "README.md"
packages    = [{ include = "drytoml", from = "src" }]

[tool.poetry.scripts]
dry = "drytoml.app:main"

[tool.poetry.dependencies]
python           = "^3.6.9"
black            = { version = "^20.8b1", optional = true }
tomlkit          = "^0.7.0"
flakehell        = { git = "https://github.com/pwoolvett/flakehell.git", rev = "58f545a07188875193bac1efd0e81e076b041561", optional = true }
fire             = "^0.4.0"
pytest           = { version = "^6.2.2", optional = true }
Sphinx           = { version = "^3.4.3", optional = true }
pytest-cov       = { version = "^2.11.1", optional = true }
sphinx-rtd-theme = { version = "^0.5.1", optional = true }
# docformatter-toml = {version = "^0.1.0", optional = true}

flake8-bandit         = { version = "^2.1.2", optional = true }
flake8-bugbear        = { version = "^20.11.1", optional = true }
flake8-builtins       = { version = "^1.5.3", optional = true }
flake8-comprehensions = { version = "^3.3.1", optional = true }
darglint              = { version = "^1.6.0", optional = true }
flake8-docstrings     = { version = "^1.5.0", optional = true }
flake8-eradicate      = { version = "^1.0.0", optional = true }
flake8-mutable        = { version = "^1.2.0", optional = true }
flake8-debugger       = { version = "^4.0.0", optional = true }
flake8-pytest-style   = { version = "^1.3.0", optional = true }
pep8-naming           = { version = "^0.11.1", optional = true }
isort                 = { version = "^5.7.0", optional = true }
pytest-html           = { version = "^3.1.1", optional = true }
m2r2                  = { version = "^0.2.7", optional = true }
recommonmark          = { version = "^0.7.1", optional = true }

[tool.poetry.extras]
black     = ["black"]
isort     = ["isort"]
flakehell = ["flakehell"]

all = ["black", "isort", "flakehell"]

format = [
    "isort",
    "black",
    # "docformatter-toml"
]
lint   = [
    "isort",
    "black",
    "darglint",
    "flakehell",
    "flake8-bandit",
    "flake8-bugbear",
    "flake8-banditflake8-bugbear",
    "flake8-builtins",
    "flake8-comprehensions",
    "flake8-darglint",
    "flake8-docstrings",
    "flake8-eradicate",
    "flake8-isort",
    "flake8-debugger",
    "flake8-mutable",
    "flake8-pytest-style",
    "pep8-naming",
]
docs   = ["sphinx", "sphinx-rtd-theme", "recommonmark", "m2r2"]
test   = ["pytest", "pytest-cov", "pytest-html"]

dev = [
    # FORMAT
    "black",
    "isort",
    #"docformatter-toml",
    # LINT
    "flakehell",
    "flake8-bandit",
    "flake8-bugbear",
    "flake8-banditflake8-bugbear",
    "flake8-builtins",
    "flake8-comprehensions",
    "flake8-darglint",
    "flake8-docstrings",
    "flake8-eradicate",
    "flake8-isort",
    "flake8-debugger",
    "flake8-mutable",
    "flake8-pytest-style",
    "pep8-naming",
    # DOCS
    "sphinx",
    "sphinx-rtd-theme",
    "recommonmark",
    "m2r2",
    # TEST
    "pytest",
    "pytest-cov",
    "pytest-html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = '''
  -raxXs
  -q
  --cov=src/drytoml
  --cov-branch
  --cov-report html:docs/build/coverage
  --html=docs/build/pytest.html --self-contained-html
  --junit-xml reports/pytest.xml
  --cov-report xml:reports/coverage.xml
'''

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
