__extends = "https://raw.githubusercontent.com/rmclabs-io/dev-styleguide/main/python/pyproject.toml"

[tool.poetry]
name        = "drytoml"
version = "0.1.2"
description = "Keep toml configuration centralized and personalizable"
authors     = ["Pablo Woolvett <pablowoolvett@gmail.com>"]
readme      = "README.md"
packages    = [{ include = "drytoml", from = "src" }]

[tool.poetry.scripts]
dry = "drytoml.app:main"

[tool.poetry.dependencies]
python  = "^3.6.9"
tomlkit = "^0.7.0"
fire    = "^0.4.0"

# wrappers
black     = { version = "^20.8b1", optional = true }
flakeheaven = {version = "^0.10.0-alpha.0", optional = true}
isort     = { version = "^5.7.0", optional = true }
# DEV
pytest                = { version = "^6.2.2", optional = true }
Sphinx                = { version = "^3.4.3", optional = true }
pytest-cov            = { version = "^2.11.1", optional = true }
sphinx-rtd-theme      = { version = "^0.5.1", optional = true }
flake8-bandit         = { version = "^2.1.2", optional = true }
flake8-bugbear        = { version = "^20.11.1", optional = true }
flake8-builtins       = { version = "^1.5.3", optional = true }
flake8-comprehensions = { version = "^3.3.1", optional = true }
darglint              = { version = "^1.6.0", optional = true }
flake8-docstrings     = { version = "^1.5.0", optional = true }
flake8-eradicate      = { version = "^1.0.0", optional = true }
flake8-mutable        = { version = "^1.2.0", optional = true }
flake8-debugger       = { version = "^4.0.0", optional = true }
flake8-pytest-style   = { version = "^1.3.0", optional = true }
pep8-naming           = { version = "^0.11.1", optional = true }
pytest-html           = { version = "^3.1.1", optional = true }
m2r2                  = { version = "^0.2.7", optional = true }
recommonmark          = { version = "^0.7.1", optional = true }
commitizen            = { version = "^2.14.2", optional = true }
pre-commit            = { version = "^2.10.1", optional = true }
pylint                = { version = "^2.6.0", optional = true }
# docformatter-toml = {version = "^0.1.2", optional = true}

[tool.poetry.extras]
black     = ["black"]
isort     = ["isort"]
flakehell = ["flakeheaven"]

all = ["black", "isort", "flakeheaven"]

format = [
    "isort",
    "black",
    # "docformatter-toml"
]
lint   = [
    "isort",
    "black",
    "pylint",
    "darglint",
    "flakeheaven",
    "flake8-bandit",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-comprehensions",
    "flake8-darglint",
    "flake8-docstrings",
    "flake8-eradicate",
    "flake8-isort",
    "flake8-debugger",
    "flake8-mutable",
    "flake8-pytest-style",
    "pep8-naming",
    "pytest",
]
docs   = ["sphinx", "sphinx-rtd-theme", "recommonmark", "m2r2"]
test   = ["pytest", "pytest-cov", "pytest-html"]

dev = [
    # dev-specific
    "commitizen",
    "pre-commit",
    # FORMAT
    "black",
    "isort",
    #"docformatter-toml",
    # LINT
    "flakeheaven",
    "flake8-bandit",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-comprehensions",
    "darglint",
    "pylint",
    "flake8-darglint",
    "flake8-docstrings",
    "flake8-eradicate",
    "flake8-isort",
    "flake8-debugger",
    "flake8-mutable",
    "flake8-pytest-style",
    "pep8-naming",
    # DOCS
    "sphinx",
    "sphinx-rtd-theme",
    "recommonmark",
    "m2r2",
    # TEST
    "pytest",
    "pytest-cov",
    "pytest-html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = '''
  -raxXs
  -q
  --cov=src/drytoml
  --cov-branch
  --cov-report html:docs/build/coverage
  --html=docs/build/pytest.html --self-contained-html
  --junit-xml reports/pytest.xml
  --cov-report xml:reports/coverage.xml
'''

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name                     = "cz_conventional_commits"
version = "0.1.2"
tag_format               = "$version"
bump_message             = "release $current_version → $new_version"
update_changelog_on_bump = true
annotated_tag            = true
version_files            = ["pyproject.toml", "docs/src/conf.py"]
